--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<title>Diário da família Gomes</title>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width = 1050, user-scalable = no" />
-	<script type="text/javascript" src="../../extras/jquery.min.1.7.js"></script>
-	<script type="text/javascript" src="../../extras/modernizr.2.5.3.min.js"></script>
-	<script type="text/javascript" src="../../lib/hash.js"></script>
+	<script type="text/javascript" src="extras/jquery.min.1.7.js"></script>
+	<script type="text/javascript" src="extras/modernizr.2.5.3.min.js"></script>
+	<script type="text/javascript" src="lib/hash.js"></script>
 	<link rel="shortcut icon" href="css/img/favicon.png" type="image/x-icon">
 </head>
 
@@ -489,9 +489,9 @@
 
 				yepnope({
 					test: Modernizr.csstransforms,
-					yep: ['../../lib/turn.js'],
-					nope: ['../../lib/turn.html4.min.js'],
-					both: ['../../lib/zoom.min.js', 'js/magazine.js', 'css/magazine.css'],
+					yep: ['lib/turn.js'],
+					nope: ['lib/turn.html4.min.js'],
+					both: ['lib/zoom.min.js', 'js/magazine.js', 'css/magazine.css'],
 					complete: loadApp
 				});
 
